--- a/client/src/components/Drinks/FeaturedDrink/FeaturedDrink.css
+++ b/client/src/components/Drinks/FeaturedDrink/FeaturedDrink.css
@@ -7,7 +7,7 @@
 .card {
     margin-top: 50px;
     position: relative;
-    width: 30% !important;
+    width: 400px;
     /* max-width: 460px; */
     height: 200px;
     /* border-radius: 20px; */
