--- a/client/src/components/Header/SignInModal/SignInModal.css
+++ b/client/src/components/Header/SignInModal/SignInModal.css
@@ -44,7 +44,7 @@
 }
 
 .signup-form{
-    
+
     display: flex;
     flex-direction: column;
     align-content: space-between;
@@ -55,11 +55,10 @@
     flex-direction: column;
     align-content: space-between;
 
-
 }
 
 .form-columns{
-    margin-left: 30%;
+    margin-left: 21%;
     margin-top:5%;
     display: flex;
     flex-direction: row;
@@ -67,12 +66,12 @@
 }
 
 .vl{
-    margin-left: 5%;
-    margin-right: 5%;
+    margin-left: 15%;
+    margin-right: 15%;
     border-left: 3px solid rgb(7, 7, 7);
     height: 400px;
     /* position: absolute; */
     left: 50%;
-    /* margin-bottom: 10%; */
+    margin-bottom: 2.5%;
     top: 0;
 }
