--- a/client/src/components/homepage/HomePage.css
+++ b/client/src/components/homepage/HomePage.css
@@ -3,3 +3,56 @@
     display: flex;  
     flex-direction: column;
 }
+
+.home-search{
+    text-align: center;
+    font-size: 1.2rem;
+    border: none;
+    outline: none;
+    background-color: lightgrey;
+    width: 10%;
+    padding: .75%;
+    transition:  .75s;
+    opacity: .5;
+    /* border-radius:50px; */
+    text-align: center;
+    margin-top: -10%;
+}
+
+.home-search:focus{
+    width: 70%;
+    cursor: text;
+    opacity: 1;
+  }
+
+.subtitle{
+    margin-top: 15%;
+    font-family: 'PT Sans', sans-serif;
+    font-size: 200%;
+}
+
+.title{
+    font-family: 'PT Sans', sans-serif;
+    font-size: 1200%;
+    margin-top: -5%;
+    background: linear-gradient(to right, #6666ff, #0099ff , #00ff00, #ff3399, #6666ff);
+    -webkit-background-clip: text;
+    background-clip: text;
+    color: transparent;
+    animation: rainbow 15s ease-in-out infinite;
+    background-size: 400% 100%;
+
+}
+
+#shadowBox {
+    background-color: rgb(0, 0, 0);
+    /* Fallback color */
+    background-color: rgba(0, 0, 0, 0.2);
+    /* Black w/opacity/see-through */
+    border: 3px solid;
+}
+
+@keyframes rainbow {
+    0%,100% {background-position: 0 0;}
+    50% {background-position: 100% 0;}
+}
