--- a/client/src/components/homepage/HomePage.css
+++ b/client/src/components/homepage/HomePage.css
@@ -23,7 +23,7 @@ body {
     background-color: rgb(46, 45, 45);
     width: 15%;
     padding: .75%;
-    transition:  .5s;
+    transition: .35s ease-in-out;
     opacity: .5;
     border-radius:5px;
     text-align: center;
@@ -32,55 +32,31 @@ body {
 }
 
 .home-search:focus{
-    width: 70%;
+    width: 65%;
     cursor: text;
     opacity: .75;
     color: #fff
   }
 
 .subtitle{
-    margin-top: 10%;
+    margin-top: 12.5%;
     font-family: 'PT Sans', sans-serif;
     font-size: 200%;
     color: #ffff;
 }
 
-.title{
-    font-family: 'PT Sans', sans-serif;
-    font-size: 1200%;
-    margin-top: -5%;
-    background: linear-gradient(to right, #6666ff, #0099ff , #00ff00, #ff3399, #6666ff);
-    -webkit-background-clip: text;
-    background-clip: text;
-    color: transparent;
-    animation: rainbow 15s ease-in-out infinite;
-    background-size: 400% 100%;
-}
-
-#shadowBox {
-    background-color: rgb(0, 0, 0);
-    /* Fallback color */
-    background-color: rgba(0, 0, 0, 0.2);
-    /* Black w/opacity/see-through */
-    border: 3px solid;
-}
-
-@keyframes rainbow {
-    0%,100% {background-position: 0 0;}
-    50% {background-position: 100% 0;}
-}
-
 .logo {
     margin-top: -3%;
-
     text-align: center;
     height: 1200%;
   }
   
 .logo b{
     font: 100 25vh "Vibur";
-    color: #fee;
-    text-shadow: 0 -40px 100px, 0 0 2px, 0 0 1em #ff4444, 0 0 0.5em #ff4444, 0 0 0.1em #ff4444, 0 10px 3px #000;
+    color: rgb(255, 244, 238);
+    text-shadow: 0 -40px 100px, 0 0 2px, 0 0 1em #ff9844, 0 0 0.5em #ff9844, 0 0 0.1em #ff9844, 0 10px 3px #000;
+    /* ff9844 */
+    /* rgb(238, 254, 255) */
 }
 .logo b span{
     animation: blink linear infinite 2s;
@@ -122,3 +98,32 @@ body {
     }
   }
   
+.parallax{
+    /* Set a specific height */
+    min-height: 600px; 
+
+    /* Create the parallax scrolling effect */
+    background-attachment: fixed;
+    background-position: center;
+    background-repeat: repeat;
+    background-size: cover;
+}
+
+.title{
+    font-family: 'PT Sans', sans-serif;
+    font-size: 1200%;
+    margin-top: -5%;
+    background: linear-gradient(to right, #6666ff, #0099ff , #00ff00, #ff3399, #6666ff);
+    -webkit-background-clip: text;
+    background-clip: text;
+    color: transparent;
+    animation: rainbow 15s ease-in-out infinite;
+    background-size: 400% 100%;
+}
+
+
+@keyframes rainbow {
+    0%,100% {background-position: 0 0;}
+    50% {background-position: 100% 0;}
+}
+
