--- a/client/src/components/homepage/HomePage.css
+++ b/client/src/components/homepage/HomePage.css
@@ -40,7 +40,7 @@ body {
 
 .subtitle{
     margin-top: 12.55%;
-    font-family: 'PT Sans', sans-serif;
+    font-family: 'Shippori Mincho', serif;
     font-size: 200%;
     color: #ffff;
 }
