--- a/client/src/components/homepage/HomePage.css
+++ b/client/src/components/homepage/HomePage.css
@@ -6,7 +6,8 @@ html,body{
 body {
     background: #112 url(//images.weserv.nl/?url=i.imgur.com/6QJjYMe.jpg)  center no-repeat;
     background-size:cover;
-    margin:0
+    margin:0;
+    overflow-y: hidden;
   }
 
 .link-container{
