--- a/client/src/components/homepage/HomePage.css
+++ b/client/src/components/homepage/HomePage.css
@@ -25,7 +25,7 @@ body {
     background-color: rgb(46, 45, 45);
     width: 15%;
     padding: .75%;
-    transition: .35s ease-in-out;
+    transition: .25s ease-in-out;
     opacity: .5;
     border-radius:5px;
     text-align: center;
@@ -34,9 +34,11 @@ body {
 }
 
 .home-search:focus{
+    margin-top: -5%;
+    font-size: 125%;
     width: 65%;
     cursor: text;
-    opacity: .75;
+    opacity: .55;
     color: #fff
 }
 
@@ -65,10 +67,11 @@ body {
 }
 
 .subtitle{
-    margin-top: 15.55%;
+    margin-top: 12.55%;
     font-family: 'Shippori Mincho', serif;
     font-size: 200%;
     color: #ffff;
+    transition: .5s ease-in-out;
 }
 
 .logo {
@@ -76,10 +79,11 @@ body {
     text-align: center;
     height: 1200%;
     margin-bottom: -2%;
+    transition: 1s ease-in-out;
+    font: 100 30vh "Vibur";
   }
   
 .logo b{
-    font: 100 25vh "Vibur";
     color: rgb(255, 238, 238);
     text-shadow: 0 -40px 100px, 0 0 2px, 0 0 1em #ff9844, 0 0 0.5em #ff9844, 0 0 0.1em #ff9844, 0 10px 3px #000;
     /* ff9844 */
@@ -153,5 +157,34 @@ body {
 @keyframes rainbow {
     0%,100% {background-position: 0 0;}
     50% {background-position: 100% 0;}
+}
+
+.hidden{
+  visibility: hidden;
+  transition: .5s ease-in-out;
+}
+
+.off{
+  /* margin-top: -4%;
+  margin-bottom: -2%;
+  text-align: center; */
+  /* position:fixed;
+  margin-left: 40%;
+  margin-top: 40%; */
+  color: inherit;
+  text-shadow: inherit;
+  transition: 2s ease-in-out;
+}
+
+.off b{
+  color: inherit;
+  text-shadow: inherit;
+
+}
+.off b span{
+  animation: none;
+}
+.off b span:nth-of-type(2){
+  animation: none;
 }
 
