--- a/client/src/components/DrinkCard/DrinkCard.css
+++ b/client/src/components/DrinkCard/DrinkCard.css
@@ -1,10 +1,46 @@
 .drink-card-container{
-    background-color: rgb(43, 44, 43);
+    background-color: rgb(35, 35, 39);
     height: 37vh;
-    width: 23%;
+    width: 22%;
     border-radius: 10px;
     background-size: cover;
     background-position: center;
     cursor: pointer;
     transition: color .5s;
+    display: flex;
+    flex-direction: column;
+}
+
+.drink-card-image{
+    border-top-right-radius: 10px;
+    border-top-left-radius: 10px;
+    margin-bottom: 41%;
+    margin-left: 25%;
+    /* height: 80%; */
+    height: 50%;
+    width: 50%;
+    opacity: .65;
+}
+.drink-card-text-info{
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+    /* align-items: flex-end; */
+    background-color: rgb(49, 49, 54);
+    /* border-radius: 10px; */
+    border-bottom-right-radius: 10px;
+    border-bottom-left-radius: 10px;
+}
+
+.drink-card-name{
+    color: #fff;
+    font-family: 'Shippori Mincho', serif;
+    font-size: larger;
+}
+
+.drink-card-ingredient{
+    color: rgb(196, 194, 194);
+    font-family: 'Shippori Mincho', serif;
+    bottom: 0;
+    font-size: smaller;
 }
