added log out functionality, updated profile page to be navigation testing, homepage lights up on appearance

--- a/client/src/components/Header/Header.css
+++ b/client/src/components/Header/Header.css
@@ -44,3 +44,14 @@
     color: transparent;
   }
   
+.header-link{
+    text-decoration: none;
+    color: #fee;
+    opacity: .05;
+    transition: .5s ease;
+}
+
+.header-link:hover{
+    opacity: .5;
+    transition: .5s ease;
+}
