--- a/client/src/components/homepage/HomePage.css
+++ b/client/src/components/homepage/HomePage.css
@@ -85,7 +85,8 @@ body {
   
 .logo b{
     color: rgb(255, 238, 238);
-    text-shadow: 0 -40px 100px, 0 0 2px, 0 0 1em #ff9844, 0 0 0.5em #ff9844, 0 0 0.1em #ff9844, 0 10px 3px #000;
+    /* text-shadow: 0 -40px 100px, 0 0 2px, 0 0 1em #ff9844, 0 0 0.5em #ff9844, 0 0 0.1em #ff9844, 0 10px 3px #000; */
+    text-shadow: 0 -40px 100px, 0 0 2px, 0 0 1em #ff9844a4, 0 0 0.5em #ff98448f, 0 0 0.1em #ff984481, 0 10px 3px #000;
     /* ff9844 */
     /* color: rgb(255, 244, 238); */
     /* rgb(238, 254, 255) */
