--- a/client/src/components/homepage/HomePage.css
+++ b/client/src/components/homepage/HomePage.css
@@ -73,6 +73,7 @@ body {
     color: #ffff;
     transition: .5s ease-in-out;
     font: 100 30vh;
+    cursor: default;
 }
 
 .logo {
@@ -82,6 +83,7 @@ body {
     margin-bottom: -2%;
     transition: 1s ease-in-out;
     font: 100 30vh "Vibur";
+    cursor: default;
   }
   
 .logo b{
