mix page styling updates

--- a/client/src/components/IngredientCard/IngredientCard.css
+++ b/client/src/components/IngredientCard/IngredientCard.css
@@ -35,6 +35,6 @@
 .ingredient-card-name{
     color: #fff;
     font-family: 'Shippori Mincho', serif;
-    font-size: larger;
+    font-size: small;
 }
 
