--- a/client/src/components/Mixing/MixPage.css
+++ b/client/src/components/Mixing/MixPage.css
@@ -7,20 +7,36 @@
     font: 100 10vh "Vibur";
 }
 
+.mix-page-items-wrapper{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+}
+
 .mix-page-jug-container{
-    
+    margin-top: -.5%;
+    margin-left: -20%;
+    margin-right: 2.5%;
+    width: 30%;
+    height: 78.5vh;
+    border-radius: 10px;
+    background-color: rgb(23, 23, 32);
+    background-size: cover;
+    background-position: center;
+    box-shadow: -80px -15px 25px rgba(0, 0, 0, 0.199);
+    z-index: 10;
+
 }
 
 .mix-page-ingredients-container{
     display:flex;
     flex-direction: column;
     justify-content: center;
-    align-items: center;
 }
 
 .mix-page-ingredients-holder{
     margin-top: -.5%;
-    width: 80%;
+    width: 150%;
     height: 78.5vh;
     border-radius: 10px;
     background-color: rgb(23, 23, 32);
