--- a/client/src/components/Results/ResultsPage.css
+++ b/client/src/components/Results/ResultsPage.css
@@ -96,17 +96,34 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
+    background-color: rgb(65, 65, 70);
+    border-radius: 15px;
+    width: 35%;
+    margin-left: 30%;
+
 }
 
 .no-results-found{
-    margin-left: 30%;
     font-family: 'Shippori Mincho', serif;
     /* font: 100 5vh "Vibur"; */
     color: rgb(241, 159, 159);
     /* text-shadow: 0 -40px 100px, 0 0 2px, 0 0 1em #ff4444, 0 0 0.5em #ff4444, 0 0 0.1em #ff4444, 0 10px 3px #000; */
-    background-color: rgb(65, 65, 70);
-    border-radius: 15px;
-    width: 35%;
+    /* background-color: rgb(65, 65, 70); */
+    /* border-radius: 15px;
+    width: 35%; */
     font-size: 150%;
     padding: 1.5%;
 }
+
+.no-results-query{
+    font-family: 'Shippori Mincho', serif;
+    /* font: 100 5vh "Vibur"; */
+    color: rgb(243, 190, 190);
+    /* text-shadow: 0 -40px 100px, 0 0 2px, 0 0 1em #ff4444, 0 0 0.5em #ff4444, 0 0 0.1em #ff4444, 0 10px 3px #000; */
+    /* background-color: rgb(65, 65, 70);
+    border-radius: 15px;
+    width: 35%; */
+    font-size: 100%;
+    padding: 1.5%;
+}
+
