--- a/client/src/components/Results/ResultsPage.css
+++ b/client/src/components/Results/ResultsPage.css
@@ -28,13 +28,26 @@
     margin-top: .25%;
     font: 100 10vh "Vibur";
     cursor: default;
+    transition: 1s;
 }
+
+.search-results-title-off{
+    color: inherit;
+    text-shadow: inherit;   
+    font-size: 300%;
+    margin-top: .25%;
+    font: 100 10vh "Vibur";
+    cursor: default;
+    transition: 1s;
+}
+
 
 .search-results-container{
     display:flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    transition: 1s;
 }
 
 .search-results-card{
@@ -49,6 +62,7 @@
     overflow-y: scroll;
     -ms-overflow-style: none; 
     scrollbar-width: none;  
+    margin-bottom: 2%;
   }
 
 .frozen{
@@ -96,22 +110,24 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    background-color: rgb(65, 65, 70);
+    align-content: center;
+    background-color: rgb(46, 45, 45);
     border-radius: 15px;
     width: 35%;
-    margin-left: 30%;
-
+    margin-top: 20%;
+    margin-left: 32%;
+    transition: 1s;
 }
 
 .no-results-found{
     font-family: 'Shippori Mincho', serif;
     /* font: 100 5vh "Vibur"; */
     color: rgb(241, 159, 159);
-    /* text-shadow: 0 -40px 100px, 0 0 2px, 0 0 1em #ff4444, 0 0 0.5em #ff4444, 0 0 0.1em #ff4444, 0 10px 3px #000; */
+    text-shadow: 0 -5px 130px, 0 0 2px, 0 0 1em #ff4444, 0 0 0.5em #ff4444, 0 0 0.1em #ff4444, 0 5px 3px #000;
     /* background-color: rgb(65, 65, 70); */
     /* border-radius: 15px;
     width: 35%; */
-    font-size: 150%;
+    font-size: 175%;
     padding: 1.5%;
 }
 
