--- a/client/src/components/IngredientCard/IngredientCard.css
+++ b/client/src/components/IngredientCard/IngredientCard.css
@@ -14,12 +14,12 @@
 .ingredient-card-image{
     border-top-right-radius: 10px;
     border-top-left-radius: 10px;
-    margin-bottom: 20%;
-    margin-left: 25%;
-    /* height: 80%; */
-    height: 50%;
-    width: 50%;
-    opacity: .65;
+    /* margin-bottom: 20%; */
+    margin-left: 20%;
+    height: 70%;
+    width: 70%;
+    max-width: 100px;
+    max-height: 80px;
 }
 .ingredient-card-text-info{
     display: flex;
