--- a/client/src/components/IngredientCard/IngredientCard.css
+++ b/client/src/components/IngredientCard/IngredientCard.css
@@ -1,7 +1,7 @@
 .ingredient-card-container{
     background-color: rgb(35, 35, 39);
     height: 15vh;
-    width: 20vh;
+    width: 25vh;
     border-radius: 10px;
     background-size: cover;
     background-position: center;
@@ -16,11 +16,33 @@
     border-top-left-radius: 10px;
     /* margin-bottom: 20%; */
     margin-left: 20%;
-    height: 70%;
-    width: 70%;
+    height: 80%;
+    width: 80%;
     max-width: 100px;
     max-height: 80px;
 }
+
+.gin {
+    margin-left: 30%;
+    height: 75px;
+    width: 55px;
+}
+
+.nutmeg{
+    height: 65px;
+    width: 65px;
+}
+
+.milk{
+    height: 75px;
+    width: 75px;
+}
+
+.mint{
+    height: 75px;
+    width: 75px;
+}
+
 .ingredient-card-text-info{
     display: flex;
     flex-direction: column;
@@ -35,6 +57,11 @@
 .ingredient-card-name{
     color: #fff;
     font-family: 'Shippori Mincho', serif;
-    font-size: small;
+    /* font-size: ; */
+    font-weight: bolder;
 }
 
+.ingredient-card-partsCount{
+    color: #fff;
+    background-color: rgb(39, 39, 43);
+}
