--- a/client/src/components/Mixing/MixPage.css
+++ b/client/src/components/Mixing/MixPage.css
@@ -5,9 +5,11 @@
     font-size: 300%;
     margin-top: .5%;
     font: 100 10vh "Vibur";
+    cursor: default;
 }
 
 .mix-page-items-wrapper{
+    margin-top: .6%;
     display: flex;
     flex-direction: row;
     justify-content: center;
@@ -63,4 +65,32 @@
     display: flex;
     flex-direction: row;
     justify-content: space-around
+}
+
+.mix-button{
+    font-family: 'Shippori Mincho', serif;
+    text-align: center;
+    border: none;
+    outline: none;
+    background-color: rgb(17, 17, 17);
+    /* width: 25%; */
+    padding-top: 5%;
+    padding-left: 10%;
+    padding-right: 10%;
+    padding-bottom: 7%;
+    transition: .35s ease-in-out;
+    /* opacity: .5; */
+    border-radius:5px;
+    text-align: center;
+    width: fit-content;
+    font-size:300%;
+    color: aqua;
+    text-shadow: 0 -40px 100px, 0 0 2px, 0 0 1em #4476ff, 0 0 0.5em #4476ff, 0 0 0.1em #4476ff, 0 10px 3px #000;
+
+}
+  
+.mix-button:hover{
+    opacity: .75;
+    color: #fff;
+    cursor: pointer;
 }
